Accumuluation: add missing c subscript in authqueue transition (#437)
* Accumuluation: add missing c subscript in authqueue tranistion

* additional parentheses

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -208,9 +208,9 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
           \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬delegator)_\ao¬poststate
       )_\ps¬stagingset \\
       \forall c \in \coreindex :
-        \local¬authqueue'\sub{c} &= (
+        \local¬authqueue'\sub{c} &= ((
           \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \ps¬assigners\sub{c})_\ao¬poststate
-        )_\ps¬authqueue \\
+        )_\ps¬authqueue)\sub{c} \\
       \mathbf{n} &= \bigcup_{s \in \mathbf{s}}( \set{
           (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\ao¬poststate)_\ps¬accounts
             \setminus
