--- a/preamble.tex
+++ b/preamble.tex
@@ -248,11 +248,8 @@
 
 %%%%%%%%%%%%
 % Simple Universal types (blackboard letters)
-\newcommand*{\serviceaccount}{\mathbb{A}}
 \newcommand*{\bitstring}[1][]{\mathbb{B}_{#1}}
-\newcommand*{\safroleticket}{\mathbb{C}}
-\newcommand*{\dictionary}{\mathbb{D}}
-\newcommand*{\dict}[2]{\dictionary\anglebar{#1\to#2}}
+\newcommand*{\dict}[2]{\anglebar{#1\to#2}}
 \newcommand*{\signature}{\mathbb{E}}
 \newcommand*{\sig}[2]{\signature_{#1}\ang{#2}}
 \newcommand*{\bssignature}{\mathbb{F}}
@@ -261,24 +258,12 @@
 \newcommand*{\bandersig}[3]{\bssignature_{#1}^{#3}\ang{#2}}
 \newcommand*{\segment}{\mathbb{G}}
 \renewcommand*{\hash}{\mathbb{H}}
-\newcommand*{\workitem}{\mathbb{I}}
 \newcommand*{\workerror}{\mathbb{J}}
-\newcommand*{\valkey}{\mathbb{K}}
-\newcommand*{\workdigest}{\mathbb{L}}
-\newcommand*{\ram}{\mathbb{M}}
 \newcommand*{\N}{\mathbb{N}}
-\newcommand*{\operandtuple}{\mathbb{O}}
-\newcommand*{\workpackage}{\mathbb{P}}
 % Q unused
 % R unused
-\newcommand*{\avspec}{\mathbb{S}}
-\newcommand*{\defxfer}{\mathbb{T}}
-\newcommand*{\defxfers}{\sequence\defxfer}
-\newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\readable}[1]{\mathbb{V}_{#1}}
 \newcommand*{\writable}[1]{\mathbb{V}^*_{#1}}
-\newcommand*{\workreport}{\mathbb{W}}
-\newcommand*{\workcontext}{\mathbb{X}}
 \newcommand*{\blob}[1][]{\mathbb{Y}_{#1}}
 \newcommand*{\Z}{\mathbb{Z}}
 
@@ -342,16 +327,16 @@
 % Named types (blackboard)
 
 % TODO make this local.
-%\newcommand*{\safroleticket}{\mathbb{C}}
+\newcommand*{\safroleticket}{\mathbb{C}}
 \newcommand*{\stX}{x}
 \newcommand*{\st¬id}{y}
 \newcommand*{\st¬entry}{\¬entry}
 
-%\newcommand*{\ram}{\mathbb{M}}
+\newcommand*{\ram}{\mathbb{M}}
 \newcommand*{\ram¬value}{\mathbf{V}}
 \newcommand*{\ram¬access}{\mathbf{A}}
 
-%\newcommand*{\workpackage}{\mathbb{P}}
+\newcommand*{\workpackage}{\mathbb{P}}
 \newcommand*{\wp¬authtoken}{\mathbf{j}}
 \newcommand*{\wp¬authcodehost}{h}
 \newcommand*{\wp¬authcodehash}{u}
@@ -363,7 +348,7 @@
 \newcommand*{\wp¬authcode}{\mathbf{c}}
 \newcommand*{\wp¬metadata}{\mathbf{m}}
 
-%\newcommand*{\workitem}{\mathbb{I}}
+\newcommand*{\workitem}{\mathbb{I}}
 \newcommand*{\wi¬service}{\¬service}
 \newcommand*{\wi¬codehash}{\¬codehash}
 \newcommand*{\wi¬payload}{\¬payload}
@@ -373,7 +358,7 @@
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 
-%\newcommand*{\workreport}{\mathbb{W}}
+\newcommand*{\workreport}{\mathbb{W}}
 \newcommand*{\wr¬avspec}{s} % O/L ¬service TODO: make bold
 \newcommand*{\wr¬context}{x} % TODO: Make bold like package. Consider renaming to \mathbf{c}
 \newcommand*{\wr¬core}{\¬core}
@@ -390,7 +375,7 @@
 % d: work output data (digest)
 % y: work payload
 
-%\newcommand*{\workdigest}{\mathbb{L}}
+\newcommand*{\workdigest}{\mathbb{L}}
 \newcommand*{\wd¬service}{\¬service}
 \newcommand*{\wd¬codehash}{\¬codehash}
 \newcommand*{\wd¬payloadhash}{\¬payloadhash}
@@ -402,7 +387,7 @@
 \newcommand*{\wd¬exportcount}{\¬exportcount}
 \newcommand*{\wd¬result}{\¬result}
 
-%\newcommand*{\operandtuple}{\mathbb{O}}
+\newcommand*{\operandtuple}{\mathbb{O}}
 \newcommand{\otX}{x}
 \newcommand*{\ot¬packagehash}{h} % O/L ¬codehash TODO: RENAME to k
 \newcommand*{\ot¬segroot}{e} % O/L ¬exportcount TODO: RENAME to r?
@@ -412,7 +397,7 @@
 \newcommand*{\ot¬gaslimit}{\¬gaslimit}
 \newcommand*{\ot¬result}{\¬result}
 
-%\newcommand*{\avspec}{\mathbb{S}}
+\newcommand*{\avspec}{\mathbb{S}}
 \newcommand*{\asX}{x}
 % TODO: Is it \as¬packagehash or \as¬bundlehash? Unclear whether this was changed to the hash of the work-package bundle or still the hash of the work-package itself.
 \newcommand*{\as¬packagehash}{h}
@@ -423,7 +408,7 @@
 
 % TODO: Move \mathbf{p} from here into the \workreport and work-package - it's really not part of the context.
 
-%\newcommand*{\workcontext}{\mathbb{X}}
+\newcommand*{\workcontext}{\mathbb{X}}
 \newcommand*{\wcX}{x}
 \newcommand*{\wc¬anchorhash}{a}
 \newcommand*{\wc¬anchorpoststate}{s}
@@ -432,7 +417,7 @@
 \newcommand*{\wc¬lookupanchortime}{t}
 \newcommand*{\wc¬prerequisites}{\mathbf{p}}
 
-%\newcommand*{\serviceaccount}{\mathbb{A}}
+\newcommand*{\serviceaccount}{\mathbb{A}}
 \newcommand*{\saX}{\mathbf{a}}
 \newcommand*{\sa¬storage}{\mathbf{s}}
 \newcommand*{\sa¬preimages}{\mathbf{p}}
@@ -453,7 +438,8 @@
 \newcommand*{\sa¬code}{\mathbf{c}}
 
 % Fields of deferred transfer.
-%\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\defxfer}{\mathbb{T}}
+\newcommand*{\defxfers}{\sequence\defxfer}
 \newcommand*{\dxX}{x}
 \newcommand*{\dx¬source}{s}
 \newcommand*{\dx¬dest}{d}
@@ -462,14 +448,14 @@
 \newcommand*{\dx¬gas}{g}
 
 % Derived fields of validator keys.
-%\newcommand*{\valkey}{\mathbb{K}}
+\newcommand*{\valkey}{\mathbb{K}}
 \newcommand*{\vk¬bs}{b}
 \newcommand*{\vk¬ed}{e}
 \newcommand*{\vk¬bls}{L}  % TODO: Rename to be a single letter.
 \newcommand*{\vk¬metadata}{m}
 \newcommand*{\allvalkeys}{\sequence[\valcount]{\valkey}}
 
-% Fields of partial state \mathbb{U}.
+\newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\ps¬accounts}{\mathbf{d}}
 \newcommand*{\ps¬stagingset}{\mathbf{i}}
 \newcommand*{\ps¬authqueue}{\mathbf{q}}
@@ -477,6 +463,9 @@
 \newcommand*{\ps¬assigners}{\mathbf{a}}
 \newcommand*{\ps¬delegator}{v}
 \newcommand*{\ps¬alwaysaccers}{\mathbf{z}}
+
+%%%%%%%%%%%%%%
+% State item tuples (fields of lower greek letters)
 
 % Fields of core statistics (\corestats)
 \newcommand*{\cs¬daload}{d}
@@ -505,9 +494,6 @@
 \newcommand*{\vs¬preimagesize}{d}
 \newcommand*{\vs¬guarantees}{g}
 \newcommand*{\vs¬assurances}{a}
-
-%%%%%%%%%%%%
-% State item tuples (fields of lower-greek letters)
 
 % Used for \reports
 \newcommand*{\rs¬workreport}{\¬workreport}
