Use dictionary instead of dict

--- a/preamble.tex
+++ b/preamble.tex
@@ -137,6 +137,7 @@
 \newcommand*{\build}[2]{#1 \with #2}
 \newcommand*{\kv}[2]{\tup{#1 \mapsto #2}}
 \newcommand*{\keyvalue}[2]{\tuple{#1 \to #2}}
+\newcommand*{\dictionary}[2]{\anglebar{#1\to#2}}
 
 % Typical operations.
 \newcommand*{\floor}[1]{\left\lfloor#1\right\rfloor}
@@ -249,7 +250,6 @@
 %%%%%%%%%%%%
 % Simple Universal types (blackboard letters)
 \newcommand*{\bitstring}[1][]{\mathbb{B}_{#1}}
-\newcommand*{\dict}[2]{\anglebar{#1\to#2}}
 \newcommand*{\signature}{\mathbb{E}}
 \newcommand*{\sig}[2]{\signature_{#1}\ang{#2}}
 \newcommand*{\bssignature}{\mathbb{F}}
