--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -24,7 +24,7 @@
 
 \subsubsection{Custom Notation}
 \begin{description}
-  \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $k$ to range $v$. See section \ref{sec:dictionaries}.
+  \item[$\dictionary{K}{V}$] The set of dictionaries making a partial bijection of domain $k$ to range $v$. See section \ref{sec:dictionaries}.
   \item[$\serviceaccount$] The set of service accounts. See equation \ref{eq:serviceaccount}.
   \item[$\bitstring$] The set of Boolean sequences/bitstrings. Subscript denotes length. See section \ref{sec:sequences}.
   \item[$\safroleticket$] The set of seal-key tickets. See equation \ref{eq:ticket}. \emph{Not used as the set of complex numbers.}
