--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -33,7 +33,7 @@ A work-report, of the set $\workreport$, is defined as a tuple of the work-packa
     \isa{\wr¬core}{\coreindex},\ 
     \isa{\wr¬authorizer}{\hash},\ 
     \isa{\wr¬authtrace}{\blob},\\
-    &\isa{\wr¬srlookup}{\dict{\hash}{\hash}},\ 
+    &\isa{\wr¬srlookup}{\dictionary{\hash}{\hash}},\ 
     \isa{\wr¬digests}{\sequence[1:\mathsf{I}]{\mathbb{L}}},\ 
     \isa{\wr¬authgasused}{\gas}
   \end{aligned}
