--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -76,7 +76,7 @@ A sequence of bits $b \in \bitstring$ is a special case since encoding each indi
 \subsubsection{Dictionary Encoding}
 In general, dictionaries are placed in the Merkle trie directly (see appendix \ref{sec:merklization} for details). However, small dictionaries may reasonably be encoded as a sequence of pairs ordered by the key. Formally:
 \begin{equation}
-  \forall K, V: \encode{d \in \dict{K}{V}} \equiv
+  \forall K, V: \encode{d \in \dictionary{K}{V}} \equiv
     \encode{
       \var{\sq{
         \orderby{k}{
