--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -88,7 +88,7 @@ The other two components of statistics are the core and service activity statist
       \isa{&\cs¬gasused&}{\gas}
     \end{alignedat}
   }}\\
-  \servicestats &\in \dict{\serviceid}{\tuple{
+  \servicestats &\in \dictionary{\serviceid}{\tuple{
     \begin{alignedat}{3}
       \isa{\ss¬provision&}{\tup{\N, \N}}\,,\;
       \isa{&\ss¬refinement&}{\tup{\N, \gas}}\,,\;\\
