--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -7,7 +7,7 @@ We retain in state information on the most recent $\mathsf{H}$ blocks. This is u
     \isa{\rh¬headerhash}{\hash},
     \isa{\rh¬stateroot}{\hash},
     \isa{\rh¬accoutlogsuperpeak}{\hash},
-    \isa{\rh¬reportedpackagehashes}{\dict{\hash}{\hash}}
+    \isa{\rh¬reportedpackagehashes}{\dictionary{\hash}{\hash}}
   }}\\
   \beefybelt &\in \sequence{\optional{\hash}} \\
   \lastaccout &\in \sequence{\tup{\serviceid, \hash}}
